add h1 for screen reader

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <main>
+      <h1 class="sr-only">3-Column preview card component project with sass</h1>
       <div class="card-container">
         <div class="card-component">
           <img src="./images/icon-sedans.svg" alt="" />
